manifests/scope/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.bababourbaki.dev"
    nginx.ingress.kubernetes.io/auth-signin:
      "https://oauth.bababourbaki.dev/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  name: weave
  namespace: weave
spec:
    rules:
    - host: weave.bababourbaki.dev
      http:
        paths:
        - backend:
            service:
              name: weave-scope-app
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
    tls:
    - hosts:
      - weave.bababourbaki.dev
      secretName: weave-tls
